add methods to get URLs instead of hrefs
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@5761 5fd0b11a-f2f7-0310-948e-c8f80ebed640